chore: change font size

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base target="_blank"/>
     <title>宁彬彬个人简历</title>
+    <style type="text/css">
+      body{
+        font-size:1.5em;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
