--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
       body{
         font-size:1.5em;
       }
+      @media screen and (max-width: 768px) {
+          .left{
+           width:100%;
+          }
+          .right{
+            
+             display:none;
+          }
+      }
+      @media screen and (min-width: 768px) {
+          .left{
+            width:80%;
+          }
+          .right{
+            width: 20%;
+            text-align:center;
+            margin-top: 1.5em;
+          }
+      }
     </style>
   </head>
   <body>
